--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
     <meta name="viewport" content="width=device-width,initial-scale=1" />
     <title>WebGPU Procedural Background</title>
     <style>
-      html, body { margin: 0; height: 100%; background: #000; }
+      html { margin: 0; height: 100%; background: #000; }
+      body { margin: 0; height: 100%; background: transparent; }
       canvas {
         position: fixed;
         inset: 0;
